--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "axios": "^0.27.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
