--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie-player": "^1.4.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
