--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@svgr/webpack": "^6.2.1",
     "axios": "^0.27.2",
-    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.4.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
